--- a/_posts/2017-07-14-ifd1996-chapter1-1.md
+++ b/_posts/2017-07-14-ifd1996-chapter1-1.md
@@ -1,12 +1,17 @@
 ---
-title: 1.1 인터넷의 역사
-keywords: 인터넷,역사
-last_updated: June 30, 1996
-tags: [인터넷,역사]
-chaptertitle: "제1장 인터넷이란?"
-sidebar: ifd1996_sidebar
-permalink: ifd1996_chapter1-1
-folder: ifd1996
+title: "1.1 인터넷의 역사"
+layout: book
+lang: ko
+permalink: "/ifd1996/ifd1996_chapter1-1/"
+date: "2017-07-14"
+categories:
+- 자료실
+tags:
+- 장애인을 위한 인터넷
+- 백남중
+excerpt: "제1장 인터넷이란? 1.1 인터넷의 역사"
+image:
+  src: ifd1996.png
 ---
 
 1994년부터 국내의 일반인에게 공개된 인터넷은 아주 짧은 시간 내에 우리의 일상 생활에 엄청난 속도로 파고들고 있다. 컴퓨터를 이용한 통신이라는 단순 개념이 아닌 사용자들의 적극적인 활용으로 우리 생활의 일부분으로 다가온 것이다.
