--- a/_posts/2017-07-14-ifd1996-chapter3-4.md
+++ b/_posts/2017-07-14-ifd1996-chapter3-4.md
@@ -1,16 +1,22 @@
 ---
-title: 3.4 맹도견
-keywords: 
-last_updated: June 30, 1996
-tags: [장애인을위한인터넷,백남중]
-sidebar: ifd1996_sidebar
-permalink: ifd1996_chapter3-4
-folder: ifd1996
+title: "3.4 맹도견"
+layout: book
+lang: ko
+permalink: "/ifd1996/ifd1996_chapter3-4/"
+date: "2017-07-14"
+categories:
+- 자료실
+tags:
+- 장애인을 위한 인터넷
+- 백남중
+excerpt: "제3장 주제별 인터넷 사이트 3.4 맹도견"
+image:
+  src: ifd1996.png
 ---
 
 ## The Seeing Eye
 
-![The Seeing Eye](/images/ifd1996/163a_Seeing_Eye.jpg)
+![The Seeing Eye](/assets/img/ifd1996/163a_Seeing_Eye.jpg)
 
 * URL: http://www.makcom.com/seeingeye/index.html
 * EMAIL: SeeingEye@markcom.com
@@ -19,7 +25,7 @@ folder: ifd1996
 
 ## The Guide Dog Foundation For The Blind Inc.
 
-![The Guide Dog Foundation For The Blind](/images/ifd1996/163b_Guide_Dog.jpg)
+![The Guide Dog Foundation For The Blind](/assets/img/ifd1996/163b_Guide_Dog.jpg)
 
 * URL: http://www.pb.net/corporate/circler/gdf.htm
 * EMAIL: guidedog@guidedog.org
@@ -36,7 +42,7 @@ folder: ifd1996
 
 ## 재단법인 일본맹도견협회
 
-![일본맹도견협회](/images/ifd1996/164_japan_guide_dog.jpg)
+![일본맹도견협회](/assets/img/ifd1996/164_japan_guide_dog.jpg)
 
 * URL: http://www.meshnet.or.jp/shopping/malls/yyk/jgda/index.html
 
@@ -44,7 +50,7 @@ folder: ifd1996
 
 ## Croatian Guide Dog & Mobility Association
 
-![Croatian Guide Dog & Mobility Association](/images/ifd1996/165_Croatian_Guide_Dog.jpg)
+![Croatian Guide Dog & Mobility Association](/assets/img/ifd1996/165_Croatian_Guide_Dog.jpg)
 
 * URL: http://malizia.zems.fer.hr/cro_GDMA/
 * EMAIL: Iva.Stipetic@fer.hr
