--- a/_posts/2017-07-14-ifd1996-chapter3-5.md
+++ b/_posts/2017-07-14-ifd1996-chapter3-5.md
@@ -1,11 +1,17 @@
 ---
-title: 3.5 수화
-keywords: 
-last_updated: June 30, 1996
-tags: [장애인을위한인터넷,백남중]
-sidebar: ifd1996_sidebar
-permalink: ifd1996_chapter3-5
-folder: ifd1996
+title: "3.5 수화"
+layout: book
+lang: ko
+permalink: "/ifd1996/ifd1996_chapter3-5/"
+date: "2017-07-14"
+categories:
+- 자료실
+tags:
+- 장애인을 위한 인터넷
+- 백남중
+excerpt: "제3장 주제별 인터넷 사이트 3.5 수화"
+image:
+  src: ifd1996.png
 ---
 
 ## Sign Linguisics Resources Index
