--- a/_posts/2017-07-14-ifd1996-chapter4-1.md
+++ b/_posts/2017-07-14-ifd1996-chapter4-1.md
@@ -1,12 +1,17 @@
 ---
-title: 4.1 LISTSERV
-keywords: 
-last_updated: June 30, 1996
-tags: [LISTSERVE]
-chaptertitle: "제4장 LISTSERVE, USENET"
-sidebar: ifd1996_sidebar
-permalink: ifd1996_chapter4-1
-folder: ifd1996
+title: "4.1 LISTSERV"
+layout: book
+lang: ko
+permalink: "/ifd1996/ifd1996_chapter4-1/"
+date: "2017-07-14"
+categories:
+- 자료실
+tags:
+- 장애인을 위한 인터넷
+- 백남중
+excerpt: "제4장 LISTSERVE, USENET 4.1 LISTSERV"
+image:
+  src: ifd1996.png
 ---
 
 해당 Listserv를 구독하기 위해서는 먼저 관리자(각 항목별 Email Adress 참조)에게 편지를 보내야 한다. 대부분의 Listserv는 자동적으로 구독 신청을 받기 때문에 편지 형식에 주의를 기울여야 한다. 관리자의 Email Address를 적은 후에는 주제(Subject)란은 비워두고 본문은 각 항목에서 '본문'에 예시한 형태로 입력해야 한다.
