--- a/_posts/2017-07-14-ifd1996-chapter4-2.md
+++ b/_posts/2017-07-14-ifd1996-chapter4-2.md
@@ -1,11 +1,17 @@
 ---
-title: 4.2 USENET
-keywords: 
-last_updated: June 30, 1996
-tags: [장애인을위한인터넷,백남중]
-sidebar: ifd1996_sidebar
-permalink: ifd1996_chapter4-2
-folder: ifd1996
+title: "4.2 USENET"
+layout: book
+lang: ko
+permalink: "/ifd1996/ifd1996_chapter4-2/"
+date: "2017-07-14"
+categories:
+- 자료실
+tags:
+- 장애인을 위한 인터넷
+- 백남중
+excerpt: "제4장 LISTSERVE, USENET 4.2 USENET"
+image:
+  src: ifd1996.png
 ---
 
 * alt.comp.blind-users 맹인 컴퓨터 사용자 모임
