--- a/_posts/2017-07-14-ifd1996-glossary.md
+++ b/_posts/2017-07-14-ifd1996-glossary.md
@@ -1,12 +1,17 @@
 ---
-title: 찾아보기
-keywords: 
-last_updated: June 30, 1996
-tags: [장애인을위한인터넷,백남중]
-sidebar: ifd1996_sidebar
-permalink: ifd1996_glossary
-folder: ifd1996
-comments: false
+title: "부록 - 찾아보기"
+layout: book
+lang: ko
+permalink: "/ifd1996/ifd1996_glossary/"
+date: "2017-07-14"
+categories:
+- 자료실
+tags:
+- 장애인을 위한 인터넷
+- 백남중
+excerpt: "부록 - 찾아보기"
+image:
+  src: ifd1996.png
 ---
 
 ## A
