--- a/_posts/2017-07-14-ifd1996-intro.md
+++ b/_posts/2017-07-14-ifd1996-intro.md
@@ -1,11 +1,17 @@
 ---
-title: 머릿말
-keywords: 
-last_updated: June 30, 1996
-tags: [장애인을위한인터넷,백남중]
-sidebar: ifd1996_sidebar
-permalink: ifd1996_intro
-folder: ifd1996
+title: "머릿말"
+layout: book
+lang: ko
+permalink: "/ifd1996/ifd1996_intro/"
+date: 2017-07-14
+categories:
+- 자료실
+tags:
+- 장애인을 위한 인터넷
+- 백남중
+excerpt: "장애인을 위한 인터넷"
+image:
+  src: ifd1996.png
 ---
 
 1994년 가을 우연한 기회에 컴퓨터를 사용하는 시각장애인 부부의 집을 방문하여 이야기를 나누던 중 사회적 관심의 대상인 인터넷을 "어떻게 하면 시각장애들도 사용할 수 있을까" 에 관심이 모아졌다.
